--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>ColaGDPS List</h2>
-                <p>v1.0.0</p>
+                <p>v1.1.0</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
@@ -67,7 +67,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSfDeum5j5140tWCWCbspcUwYG7_4D4y-mm32_ZmFaxyI2J66Q/viewform?usp=dialog"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSf8aAIp6dCYiyhzO9jW_BAXBwKbjZbzj6e1Vo-3gy8nlJhWmg/viewform?usp=publish-editor"
                         target="_blank"
                         >Submit Record</a
                     >
