--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>ColaGDPS List</h2>
-                <p>v1.2.4</p>
+                <h2>ColaGDPS Demon List</h2>
+                <p>v1.2.5</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
